--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,4 +18,5 @@ body {
 .redSmallWarning {
     color: red;
     font-size: 0.85em;
+    margin-bottom: 20px;
 }
